[Fix] #35 - Fixed gap and flip setting

--- a/src/styles/todayWordPage/TodayWordView.scss
+++ b/src/styles/todayWordPage/TodayWordView.scss
@@ -1,8 +1,29 @@
-.card-box {
-    display: flex;
-
-    padding: 0 20px;
+.todaywordview {
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
+    gap: 32px;
+
+    .card-box {
+        display: flex;
+
+        padding: 0 20px;
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+
+        height: 100%;
+    }
+}
+
+.todayword-back-img {
+    width: calc(100vw - 40px);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wordcard-height {
+    height: 100%;
 }
